Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-37068

Can't find record in 't1' on INSERT to Vector table

    XMLWordPrintable

Details

    • Can result in unexpected behaviour
    • Vector index was corrupted if one statement was rolled back (e.g. insert violating a unique constraint) in the middle of a larger transaction.

    Description

      --source include/have_innodb.inc
      --source include/have_sequence.inc
      SET sql_mode='';
      CREATE TABLE t1 (v VECTOR (1) NOT NULL,VECTOR vec (v),UNIQUE vu (v)) ENGINE=InnoDB;
      XA START 'a';
      --error ER_DUP_ENTRY
      INSERT INTO t1 SELECT * FROM seq_10_to_20;  # Any values
      INSERT INTO t1 VALUES (1);  # Any value
      

      CLI exec example:

      CS 12.0.1 f1102da37a3dcdc8b92e0205f0a8bd878704b168 (Debug) Build 06/06/2025

      12.0.1-dbg>INSERT INTO t1 SELECT * FROM seq_10_to_20;  # Any value
      ERROR 1062 (23000): Duplicate entry '\x00\x00\x00\x00' for key 'vu'
      12.0.1-dbg>INSERT INTO t1 VALUES (1);  # Any value
      ERROR 1032 (HY000): Can't find record in 't1'
      

      Without clearing sql_mode:

      CS 12.0.1 f1102da37a3dcdc8b92e0205f0a8bd878704b168 (Debug) Build 06/06/2025

      12.0.1-dbg>INSERT INTO t1 SELECT * FROM seq_10_to_20;  # Any value
      ERROR 4078 (HY000): Cannot cast 'bigint unsigned' as 'vector' in assignment of `test`.`t1`.`v`
      12.0.1-dbg>INSERT INTO t1 VALUES (1);  # Any value
      ERROR 4078 (HY000): Cannot cast 'int' as 'vector' in assignment of `test`.`t1`.`v`
      

      And with MyISAM instead:

      CS 12.0.1 f1102da37a3dcdc8b92e0205f0a8bd878704b168 (Debug) Build 06/06/2025

      12.0.1-dbg>INSERT INTO t1 SELECT * FROM seq_10_to_20;  # Any value
      ERROR 1062 (23000): Duplicate entry '\x00\x00\x00\x00' for key 'vu'
      12.0.1-dbg>INSERT INTO t1 VALUES (1);  # Any value
      ERROR 1062 (23000): Duplicate entry '\x00\x00\x00\x00' for key 'vu'
      

      Bug Detection Matrix

          Rel    o/d  Build   Commit                                    UniqueID observed             
      CS  10.6   dbg  060625  643319a7fb1e273797c2a1e46d76cfac0fa1da8f  No bug found                  
      CS  10.6   opt  060625  643319a7fb1e273797c2a1e46d76cfac0fa1da8f  No bug found                  
      CS  10.11  dbg  060625  11d1ac7285221ab4df7d9ef7cc8ee949b01c9b32  No bug found                  
      CS  10.11  opt  060625  11d1ac7285221ab4df7d9ef7cc8ee949b01c9b32  No bug found                  
      CS  11.4   dbg  060625  8c6cbb336081a5e1ad781df4a9778b61e3b4d73f  No bug found                  
      CS  11.4   opt  060625  8c6cbb336081a5e1ad781df4a9778b61e3b4d73f  No bug found                  
      CS  11.8   dbg  060625  67e6fdee05ead4974fe632e91c38941ade369b0c  MARIADBD_ERROR|mariadbd: Can't find record in table
      CS  11.8   opt  060625  67e6fdee05ead4974fe632e91c38941ade369b0c  MARIADBD_ERROR|mariadbd: Can't find record in table
      CS  12.0   dbg  060625  f1102da37a3dcdc8b92e0205f0a8bd878704b168  MARIADBD_ERROR|mariadbd: Can't find record in table
      CS  12.0   opt  060625  f1102da37a3dcdc8b92e0205f0a8bd878704b168  MARIADBD_ERROR|mariadbd: Can't find record in table
      CS  12.1   dbg  100625  6a2afb42ba86188ccda0972f9c2df363f34e10a0  MARIADBD_ERROR|mariadbd: Can't find record in table
      CS  12.1   opt  100625  6a2afb42ba86188ccda0972f9c2df363f34e10a0  MARIADBD_ERROR|mariadbd: Can't find record in table
      ES  10.5   dbg  060625  ec7bc4f84e490b25f52db7422a1e0e8bbea72fb1  No bug found                  
      ES  10.5   opt  060625  ec7bc4f84e490b25f52db7422a1e0e8bbea72fb1  No bug found                  
      ES  10.6   dbg  060625  8541ea1e4c2fa15789dd162f6ba4b32681f74e61  No bug found                  
      ES  10.6   opt  060625  8541ea1e4c2fa15789dd162f6ba4b32681f74e61  No bug found                  
      ES  11.4   dbg  060625  1c8b2d3059f5ccb67c042868baca3ee269c6eca7  MARIADBD_ERROR|mariadbd: Can't find record in table
      ES  11.4   opt  060625  1c8b2d3059f5ccb67c042868baca3ee269c6eca7  MARIADBD_ERROR|mariadbd: Can't find record in table
      ES  11.8   dbg  110625  b9f97a5bc42a4f23889996d2891bcbb0cafcf0bc  MARIADBD_ERROR|mariadbd: Can't find record in table
      ES  11.8   opt  110625  b9f97a5bc42a4f23889996d2891bcbb0cafcf0bc  MARIADBD_ERROR|mariadbd: Can't find record in table
      

      Attachments

        Activity

          People

            serg Sergei Golubchik
            Roel Roel Van de Paar
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.25d
                0.25d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.