MDEV-37068 Can't find record in 't1' on INSERT to Vector table

ER_DUP_ENTRY only rolls back one current statement, it doesn't
abort the transaction. Thus MHNSW_Trx has to register for
"statement transaction" and support "statement rollback".